Added menu, integrated login

--- a/matheorems/src/styles/App.css
+++ b/matheorems/src/styles/App.css
@@ -25,8 +25,11 @@
 
 .ui.menu {
     margin-top: 0;
-    height: 100%;
     margin-left: 2px;
     margin-right: 2px;
-    
+}
+
+.class-container {
+    text-align: center;
+    margin: 0;
 }
