Working adding and storing base64 theorems

--- a/matheorems/src/styles/App.css
+++ b/matheorems/src/styles/App.css
@@ -66,3 +66,10 @@
 .viewerType {
     margin-left: 10px !important;
 }
+
+
+.class-selector {
+    margin-left: 5px !important;
+    height: 38px !important;
+    z-index: 9000 !important;
+}
